# CtxForge

./: .gitignore  README.md  phase2-memory-design.md  pyproject.toml
docs/: README.md  claudecode-architecture-research.md  phase1-context-builder-design.md  phase2-memory-design.md  phase3-skill-design.md  phase4-deepseek-runtime-design.md  phase5-cache-report-design.md  phase6-tui-design.md  架构与技术选型.md  需求表.md
src/ctxforge/: __init__.py  __main__.py  logging.py
src/ctxforge/cache/: __init__.py  analyzer.py  models.py  snapshot.py  store.py
src/ctxforge/cli/: app.py
src/ctxforge/config/: __init__.py  paths.py  settings.py
src/ctxforge/context/: __init__.py  budget.py  builder.py  models.py  render.py  snapshot.py
src/ctxforge/llm/: __init__.py  deepseek.py  errors.py  models.py
src/ctxforge/memory/: __init__.py  manager.py  models.py  render.py  store.py
src/ctxforge/runtime/: __init__.py  agent.py  events.py  stream.py  summary.py
src/ctxforge/skills/: __init__.py  manager.py  models.py  registry.py  render.py
src/ctxforge/tui/: __init__.py  app.py  messages.py  state.py  styles.tcss
src/ctxforge/tui/widgets/: __init__.py  cache_panel.py  context_panel.py  memory_panel.py  response_panel.py
tests/: test_cache_analyzer.py  test_cache_store.py  test_cli.py  test_context_builder.py  test_deepseek_client.py  test_deepseek_stream.py  test_memory_manager.py  test_memory_store.py  test_phase4_runtime.py  test_phase5_runtime.py  test_phase6_runtime.py  test_runtime.py  test_settings.py  test_skills.py  test_tui.py
